--- a/index2.html
+++ b/index2.html
@@ -5,50 +5,33 @@
     <script src="http://code.jquery.com/jquery-2.0.3.js"></script>
     <script src="application.js"></script>
     <link rel="stylesheet" type="text/css" href="layout.css" />
-    <style>
-##    body { font: 14pt Arial, sans-serif; background: lightgrey; }
-##    select { font: 14pt Arial, sans-serif; }
-##    body { text-align: center; margin-top: 20pt; position: relative;}
-##    canvas { display: inline-block; background: #202020; box-shadow: 0px 0px 10px blue;}
-##    #record.recording { background: red;
-##    background: -webkit-radial-gradient(center, ellipse cover, #ff0000 0%,lightgrey 75%,lightgrey 100%,#7db9e8 100%); }
-    </style>
-
     <script>
       $(document).ready(function (){
-        console.log("Being initialization of WebRTC");
-        if (!webrtcDetectedBrowser) {
-          console.log("Does not support WebRTC.");
-          return;
-        }
-        if (webrtcDetectedBrowser == "chrome" && webrtcDetectedVersion < 30) {
-          console.log("Browser not supported. Please upgrade to latest Chrome.");
+        var App = Classroom.getInstance();
+        if (!App) {
+          console.log("Browser not supported.");
           return;
         }
 
-        // get a list of WebRTC inputs.
-        MediaStreamTrack.getSources(function(sourceInfos) {
+        // Update combo-boxes will list of available audio inputs.
+        App.getAudioSources(function(inputMap) {
           var microphoneSelect = $("select#microphone");
           var tanpuraSelect = $("select#tanpura");
 
           // fill up combo-boxes with available input audio devices.
-          $.each(sourceInfos, function(index, sourceInfo) {
-            console.log(index + " -- " + sourceInfo + " " + sourceInfo.kind + " " + sourceInfo.label);
-            if (sourceInfo.kind === "audio") {
-              var text = sourceInfo.label || 'Audio Input ' + (microphoneSelect[0].length);
+          $.each(inputMap, function(id, label) {
               microphoneSelect.append($("<option/>", {
-                                          value: sourceInfo.id,
-                                          text: text
+                                          value: id,
+                                          text: label
                                         }));
               tanpuraSelect.append($("<option/>", {
-                                          value: sourceInfo.id,
-                                          text: text
+                                          value: id,
+                                          text: label
                                         }));
-              }
-            });
           });
-        console.log("All is well.");
         });
+        console.log("All is well.");
+      });
     </script>
   </head>
   <body>
@@ -81,40 +64,62 @@
       </div>
     </div>
     <audio autoplay ></audio>
+    <audio autoplay ></audio>
   </body>
   <script>
-    var App = {};
-    $.extend(App, {context : new webkitAudioContext()});
-    // setup the WebAudio pipeline for processing local audio inputs.
-    
-
-    $("button#start").click(function(){
+    $("button#start").click(function() {
       var self = $(this);
       if (self.text() === "Start") {
         console.log("Starting using user selections.");
         var microphoneId = $("#microphone")[0].value;
         var tanpuraId = $("#tanpura")[0].value;
 
-        var constraints = {
-          audio: {
-            optional: [ {sourceId: microphoneId} ]
-          }
-        };
-        getUserMedia(constraints, function(stream) {
-          var microphone = App.context.createMediaStreamSource(stream);
-          var filter = App.context.createBiquadFilter();
-          microphone.connect(filter);
-          filter.connect(context.destination);
-          //$("audio")[0].src = window.URL.createObjectURL(stream);
-          // $("audio")[0].play();
-          self.text("Stop");
-        }, function (error) {
-          console.log("Error " + error);
-        });
+        if (microphoneId === "null" && tanpuraId === "null") {
+          console.log("Nothing selected, nothing to do.");
+          return;
+        }
+
+
+        var App = Classroom.getInstance();
+        if (microphoneId !== "null") {
+          App.addAudioInput(microphoneId, function(item) {
+            console.log("Microphone input setup.");
+            // change button text.
+            self.text("Stop");
+          });
+        } else {
+          console.log("No microphone input selected. Skipping.");
+        }
+
+        if (tanpuraId !== "null") {
+          App.addAudioInput(tanpuraId, function(item) {
+            console.log("Tanpura input setup.");
+            // change button text.
+            self.text("Stop");
+          });
+        } else {
+          console.log("No tanpura input selected. Skipping.");
+        }
+
+        //var constraints = {
+        //  audio: {
+        //    optional: [ {sourceId: microphoneId} ]
+        //  }
+        //};
+        //getUserMedia(constraints, function(stream) {
+        //  var microphone = App.context.createMediaStreamSource(stream);
+        //  var filter = App.context.createBiquadFilter();
+        //  microphone.connect(filter);
+        //  filter.connect(context.destination);
+        //  //$("audio")[0].src = window.URL.createObjectURL(stream);
+        //  // $("audio")[0].play();
+        //  self.text("Stop");
+        //}, function (error) {
+        //  console.log("Error " + error);
+        //});
       } else {
-       // $("audio")[0].pause();
-        $("audio")[0].src = null;
-        self.text("Start");
+        //$("audio")[0].src = null;
+        //self.text("Start");
       }
     });
   </script>
