--- a/index2.html
+++ b/index2.html
@@ -51,10 +51,16 @@
           </select>
         </p>
         <p>
+          <audio id="microphone"></audio>
+        </p>
+        <p>
           <label>Select Tanpura input (if applicable):</label>
           <select id="tanpura">
             <option value="null">None</option>
           </select>
+        </p>
+        <p>
+          <audio id="tanpura"></audio>
         </p>
         <p><button id="start">Start</button></p>
       </div>
@@ -63,22 +69,19 @@
         Attribution (Fedora License).
       </div>
     </div>
-    <audio autoplay ></audio>
-    <audio autoplay ></audio>
   </body>
   <script>
     $("button#start").click(function() {
       var self = $(this);
       if (self.text() === "Start") {
         console.log("Starting using user selections.");
-        var microphoneId = $("#microphone")[0].value;
-        var tanpuraId = $("#tanpura")[0].value;
+        var microphoneId = $("select#microphone")[0].value;
+        var tanpuraId = $("select#tanpura")[0].value;
 
         if (microphoneId === "null" && tanpuraId === "null") {
           console.log("Nothing selected, nothing to do.");
           return;
         }
-
 
         var App = Classroom.getInstance();
         if (microphoneId !== "null") {
@@ -86,6 +89,10 @@
             console.log("Microphone input setup.");
             // change button text.
             self.text("Stop");
+            var mediaElement = $("audio#microphone")[0];
+            mediaElement.src = window.URL.createObjectURL(item.webRTCStream)
+            mediaElement.controls = true;
+            mediaElement.play();
           });
         } else {
           console.log("No microphone input selected. Skipping.");
@@ -96,27 +103,15 @@
             console.log("Tanpura input setup.");
             // change button text.
             self.text("Stop");
+            var mediaElement = $("audio#tanpura")[0];
+            mediaElement.src = window.URL.createObjectURL(item.webRTCStream)
+            mediaElement.controls = true;
+            mediaElement.play();
+
           });
         } else {
           console.log("No tanpura input selected. Skipping.");
         }
-
-        //var constraints = {
-        //  audio: {
-        //    optional: [ {sourceId: microphoneId} ]
-        //  }
-        //};
-        //getUserMedia(constraints, function(stream) {
-        //  var microphone = App.context.createMediaStreamSource(stream);
-        //  var filter = App.context.createBiquadFilter();
-        //  microphone.connect(filter);
-        //  filter.connect(context.destination);
-        //  //$("audio")[0].src = window.URL.createObjectURL(stream);
-        //  // $("audio")[0].play();
-        //  self.text("Stop");
-        //}, function (error) {
-        //  console.log("Error " + error);
-        //});
       } else {
         //$("audio")[0].src = null;
         //self.text("Start");
