Added placeholder for the connection part.

--- a/index_bs.html
+++ b/index_bs.html
@@ -82,6 +82,12 @@
             </ul>
             </p>
         </div>
+
+
+        <div id="golive" class="madhushala-template">
+            <h1>connect and go live!</h1>
+            <p class="lead">Connect with your teacher or student.</p>
+        </div>
     </div> <!-- container -->
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
