Fixes for audio quality.
Basically need Canary (39) now since we need to disable
echoCancellation which doesn't work in Chrome 36.

--- a/index_bs.html
+++ b/index_bs.html
@@ -121,6 +121,9 @@
     <!-- my application specific things -->
     <script src="http://code.jquery.com/jquery-2.0.3.js"></script>
     <script src="http://cdn.peerjs.com/0.3/peer.js"></script>
+    <!--
+    <script src="modified.peer.js"></script>
+    -->
     <script src="adapter.js"></script>
     <script src="application.js"></script>
     <script>
