--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Madhushala</title>
+    <title>The Lesson</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -28,7 +28,7 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">Madhushala</a>
+              <a class="navbar-brand" href="#">The Lesson</a>
           </div>
           <div class="collapse navbar-collapse">
               <ul class="nav navbar-nav">
@@ -42,7 +42,7 @@
   </div> <!-- navbar -->
   <div class="container theme-showcase text-center" role="main">
         <div class="madhushala-template">
-            <h1>madhushala</h1>
+            <h1>the lesson</h1>
             <p class="lead">
             To get started, <a href="#setup">set up</a> your local configuration by
             selecting the audio input(s). <br/>
@@ -85,14 +85,13 @@
 
         <div id="golive" class="madhushala-template">
             <h1>connect and go live!</h1>
-            <p class="lead">Connect with your teacher or student.</p>
             <p class="center">
                 <form class="form-horizontal" role="form" id="page1">
                     <div class="form-group">
                         <label for="pseudonym" class="col-sm-6 control-label">Pseudonym</label>
                         <div class="col-sm-6">
                             <input type="text" class="form-control" id="pseudonym"
-                                   placeholder="Enter pseudonym to identify you" />
+                                   placeholder="Enter a pseudonym to identify you" />
                         </div>
                     </div>
                     <button id="connect" type="button" class="btn btn-success">Connect</button>
@@ -249,7 +248,7 @@
                     /* disconnect */
                 } else {
                     self.text("Disconnect");
-                    App.connectToPeer($("input#peerid").val());
+                    App.connectToPeer($("input#peerid").val().toLowerCase());
                 }
                 });
 
@@ -257,7 +256,8 @@
               /* initialize server connection */
                 var self = $(this);
                 busy("Signing on ...", self);
-                App.connectToServer($("input#pseudonym").val(), function(myid) {
+                var suggestedMyId = $("input#pseudonym").val().toLowerCase();
+                App.connectToServer(suggestedMyId, function(myid) {
                     $("input#yourid").val(myid);
                     $("form#page1").addClass("hidden");
                     $("form#page2").removeClass("hidden");
